# metadata-lookup

./: .dockerignore  Cargo.toml  Dockerfile
src/: error.rs  main.rs  metadata.rs
